--- a/docs/src/.vuepress/styles/index.styl
+++ b/docs/src/.vuepress/styles/index.styl
@@ -96,11 +96,10 @@
     margin:5px;
     min-width: 280px;
     padding: 0 16px 16px 16px;
-    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2),0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12);
   }
 
   .contentbox h4 {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
     margin-block-start: 16px;
     margin-block-end: 0;
@@ -109,12 +108,63 @@
   .contentbox p {
     font-size: 14px;
     margin-block-start: 8px;
-    margin-block-end: 30px;
+    margin-block-end: 0;
   }
 
-   .contentbox a {
+   /*.contentbox a {
     font-size: 14px;
     margin-block-start: 16px;
     text-transform: uppercase;
+  }*/
+
+  .contentbox img {
+    float: left;
+    padding-right:15px;
+    padding-top:18px;
+    padding-bottom:15px;
   }
+
+  .shadedbutton {
+    flex: 1;
+    margin: 5px;
+    margin-right: 25px;
+    min-width: 260px;
+    padding: 0 16px 16px 16px;
+    background-color: #eaecf0;
+    /*box-shadow: 0 3px 1px -2px rgba(0,0,0,.2),0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12);*/
+  }
+
+  .shadedbutton p {
+    font-size: 16px;
+    margin-block-start: 16px;
+    margin-block-end: 0;
+  }
+
+  .shadedbutton a {
+    color: #202122;
+    font-weight: 600;
+  }
+
+  .shadedbutton a:hover {
+    color: #2a4b8d;
+  }
+
+  .button {
+    flex: 1;
+    margin-right: 15px;
+    padding-top: 0;
+    padding-right: 16px;
+    padding-bottom: 0;
+    padding-left: 16px;
+    min-width: 150px;
+    font-size:16px;
+  }
+
+  .button img {
+    float: left;
+    padding-right:15px;
+    padding-top:18px;
+    padding-bottom:15px;
+  }
+
 }
