--- a/docs/src/.vuepress/styles/index.styl
+++ b/docs/src/.vuepress/styles/index.styl
@@ -167,4 +167,13 @@
     padding-bottom:15px;
   }
 
+  .navbar {
+    background-color: #eaecf0;
+    border-bottom: none;
+  }
+
+  .navbar .links {
+    background-color: #eaecf0;
+  }
+
 }
