add multi-page v2

--- a/docs/src/.vuepress/styles/index.styl
+++ b/docs/src/.vuepress/styles/index.styl
@@ -111,6 +111,11 @@
     margin-block-end: 0;
   }
 
+  .contentbox li {
+    font-size: 14px;
+    margin-block-start: 4px;
+  }
+
    /*.contentbox a {
     font-size: 14px;
     margin-block-start: 16px;
