Dev portal home: Add styling and change headers into links
This design change makes the images and section headers slightly
smaller, and removes the repetitive "learn more" links in favor of
making both the section headers and images clickable.

--- a/docs/src/.vuepress/styles/index.styl
+++ b/docs/src/.vuepress/styles/index.styl
@@ -4,8 +4,19 @@
  * ref：https://v1.vuepress.vuejs.org/config/#index-styl
  */
 
-.home .hero img
-  max-width 450px!important
+.home .hero img {
+  max-width 450px!important;
+}
+
+.home-section {
+  padding: 1rem;
+  width: 100%;
+  float:left;
+  border-top: 1px solid #DDD;
+}
+.home-section h2 {
+  border:none;
+}
 
 
 /**
